--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dist"
   ],
   "dependencies": {
+    "@types/estree": "0.0.47",
     "compare-versions": "^4.1.2",
     "prop-types": "^15.7.2"
   }
